--- a/desafios/desafio12-cordel-moderno/index.html
+++ b/desafios/desafio12-cordel-moderno/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1 class="negativo">Cordel Moderno</h1>
+        <h1>Cordel Moderno</h1>
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
 
@@ -27,7 +27,7 @@
         </section>
 
         <section class="joaninha sombra-interna">
-            <p class="negativo contraste">
+            <p class="contraste">
                 Não é mais como era antes <br>
                 É tudo abreviado <br>
                 "Você" só tem duas letras <br>
@@ -60,7 +60,7 @@
         </section>
         
         <section class="livro sombra-interna">
-            <p class="negativo contraste">
+            <p class="contraste">
                 Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
                 Mandava no mês de Junho <br>
