--- a/desafios/desafio12-cordel-moderno/index.html
+++ b/desafios/desafio12-cordel-moderno/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="caixa-normal">
             <p>
                 Estou ficando cansado <br>
                 Da tal tecnologia <br>
@@ -26,7 +26,7 @@
             </p>
         </section>
 
-        <section class="joaninha sombra-interna">
+        <section class="joaninha  caixa-imagem">
             <p class="contraste">
                 Não é mais como era antes <br>
                 É tudo abreviado <br>
@@ -59,7 +59,7 @@
             </p>
         </section>
         
-        <section class="livro sombra-interna">
+        <section class="livro caixa-imagem">
             <p class="contraste">
                 Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
